profile page image stretch fix

--- a/assets/scss/user_profile_mobile.scss
+++ b/assets/scss/user_profile_mobile.scss
@@ -35,7 +35,7 @@ body{
                     img{
                         border: solid #242526 5px;
                         height: 130px;
-                        width: 170px;
+                        width: 130px;
                         object-fit: cover;
                         margin-left: 50%;
                         transform: translateX(-50%);
